# src/marketplace/dto/buy-tokens.dto.ts
@@ -1,0 +1,15 @@
+import { IsNotEmpty, IsNumber, IsPositive, IsUUID } from 'class-validator';
+import { Type } from 'class-transformer';
+
+export class BuyTokensDto {
+  @IsNotEmpty()
+  @IsUUID()
+  listingId: string;
+
+  @IsNotEmpty()
+  @IsNumber()
+  @IsPositive()
+  @Type(() => Number)
+  tokensToBuy: number;
+}
+
